--- a/rails/Vagrantfile
+++ b/rails/Vagrantfile
@@ -4,6 +4,8 @@ Vagrant.configure('2') do |config|
   config.vm.network :forwarded_port, guest: 3000, host: 13000
   config.vm.network :forwarded_port, guest: 5432, host: 15432
 
+  config.vm.provision "file", source: "~/.gitconfig", destination: ".gitconfig"
+
   config.vm.provision :shell, path: 'bootstrap.sh', keep_color: true
 
 end
